feat(Level): add methods to print missions
- 각 레벨에 해당하는 미션을 출력하기 위해 메서드 추가